# c_passgen

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
generator/: CMakeLists.txt
generator/src/: Generator.h  main.c
